[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/parents/parent_enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Enemies/enemy_vela.png" type="Texture" id=2]
[ext_resource path="res://Scripts/enemy_vela.gd" type="Script" id=3]
[ext_resource path="res://Scenes/actors/enemies/playerDetector.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.104572, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 1 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 6 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 60 )

[node name="enemy_vela" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="EnemyStats" parent="." index="0"]
max_health = 2

[node name="Sprite" parent="." index="1"]
position = Vector2( 0, -4 )
texture = ExtResource( 2 )
hframes = 3

[node name="AnimationPlayer" parent="." index="3"]
autoplay = "idle"
anims/idle = SubResource( 1 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = null

[node name="Hurtbox" parent="." index="5"]
position = Vector2( 0, -6 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="playerDetector" parent="." index="6" instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="playerDetector" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 3 )

[node name="attackCooldown" type="Timer" parent="." index="7"]
wait_time = 2.5
one_shot = true

[node name="bulletInitPos" type="Position2D" parent="." index="8"]
position = Vector2( 0, -6 )

[connection signal="playerDetected" from="playerDetector" to="." method="_on_playerDetector_playerDetected"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
[editable path="playerDetector"]
